--- a/peakers-frontend/src/pages/styles/SupplierProducts.module.css
+++ b/peakers-frontend/src/pages/styles/SupplierProducts.module.css
@@ -21,7 +21,9 @@
   padding: 8px 14px;
   font-size: 14px;
   cursor: pointer;
-  transition: background-color 0.2s ease, border-color 0.2s ease;
+  transition:
+    background-color 0.2s ease,
+    border-color 0.2s ease;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -69,7 +71,9 @@
   border-radius: 18px;
   font-size: 14px;
   cursor: pointer;
-  transition: background-color 0.2s ease, border-color 0.2s ease;
+  transition:
+    background-color 0.2s ease,
+    border-color 0.2s ease;
   z-index: 1000;
 }
 
@@ -93,7 +97,9 @@
   font-size: 24px;
   cursor: pointer;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-  transition: background 0.3s ease, transform 0.2s ease;
+  transition:
+    background 0.3s ease,
+    transform 0.2s ease;
   z-index: 1000;
 }
 
@@ -320,8 +326,9 @@
 }
 @media (max-width: 768px) {
   .backBtn {
-    left: auto; /* Remove default left */
-    right: 10px; /* Move it to the right */
-    transform: translateY(450px); /* pushes it down by 20px */
+    top: auto;
+    bottom: 90px; /* sits ABOVE the + button */
+    left: 250px;
+    right: auto;
   }
 }
